별똥별 사선 효과 + 글씨 빛나는 효과

--- a/index.html
+++ b/index.html
@@ -78,17 +78,32 @@
 
         .shooting-star {
             position: absolute;
-            width: 80px;
-            height: 2px;
-            background: linear-gradient(90deg, #ffd700, transparent);
-            animation: shoot 3s ease-in-out infinite;
+            width: 150px;
+            height: 3px;
+            background: linear-gradient(90deg, #fff, #ffd700, transparent);
+            border-radius: 50%;
+            transform: rotate(-45deg);
+            animation: shoot 2.5s ease-in-out infinite;
             opacity: 0;
+            box-shadow: 0 0 10px #ffd700, 0 0 20px #ffd700;
+        }
+
+        .shooting-star::before {
+            content: '';
+            position: absolute;
+            width: 8px;
+            height: 8px;
+            background: white;
+            border-radius: 50%;
+            left: 0;
+            top: -2.5px;
+            box-shadow: 0 0 10px #fff, 0 0 20px #ffd700;
         }
 
         @keyframes shoot {
-            0% { transform: translateX(-100px) translateY(0); opacity: 0; }
-            10% { opacity: 1; }
-            30% { transform: translateX(200px) translateY(100px); opacity: 0; }
+            0% { transform: rotate(-45deg) translateX(-50px); opacity: 0; }
+            5% { opacity: 1; }
+            35% { transform: rotate(-45deg) translateX(350px); opacity: 0; }
             100% { opacity: 0; }
         }
 
@@ -112,24 +127,45 @@
         .title {
             font-size: 28px;
             font-weight: 800;
-            color: #ffd700;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+            color: #fff;
+            text-shadow: 0 0 10px #ffd700, 0 0 20px #ffd700, 0 0 30px #ffaa00, 0 0 40px #ffaa00;
             margin-bottom: 10px;
+            animation: textGlow 2s ease-in-out infinite;
+        }
+
+        @keyframes textGlow {
+            0%, 100% {
+                text-shadow: 0 0 10px #ffd700, 0 0 20px #ffd700, 0 0 30px #ffaa00;
+                color: #fff;
+            }
+            50% {
+                text-shadow: 0 0 20px #ffd700, 0 0 30px #ffd700, 0 0 40px #ffaa00, 0 0 50px #ffaa00;
+                color: #fffacd;
+            }
         }
 
         .subtitle {
             font-size: 18px;
-            color: #ffeb99;
+            color: #fff;
             line-height: 1.6;
             margin-bottom: 15px;
+            text-shadow: 0 0 8px #ffd700, 0 0 15px rgba(255, 215, 0, 0.5);
         }
 
         .highlight {
-            background: linear-gradient(90deg, #ff6b35, #ffd700);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
+            color: #fff;
             font-weight: 700;
+            text-shadow: 0 0 15px #ffd700, 0 0 25px #ffd700, 0 0 35px #ffaa00;
+            animation: highlightGlow 1.5s ease-in-out infinite;
+        }
+
+        @keyframes highlightGlow {
+            0%, 100% {
+                text-shadow: 0 0 15px #ffd700, 0 0 25px #ffd700;
+            }
+            50% {
+                text-shadow: 0 0 25px #ffd700, 0 0 35px #ffd700, 0 0 45px #ffaa00;
+            }
         }
 
         /* Buttons */
