별똥별 방향 수정 + 푸터 로고 변경

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             height: 3px;
             background: linear-gradient(90deg, #fff, #ffd700, transparent);
             border-radius: 50%;
-            transform: rotate(-45deg);
+            transform: rotate(135deg);
             animation: shoot 2.5s ease-in-out infinite;
             opacity: 0;
             box-shadow: 0 0 10px #ffd700, 0 0 20px #ffd700;
@@ -101,9 +101,9 @@
         }
 
         @keyframes shoot {
-            0% { transform: rotate(-45deg) translateX(-50px); opacity: 0; }
+            0% { transform: rotate(135deg) translateX(-50px); opacity: 0; }
             5% { opacity: 1; }
-            35% { transform: rotate(-45deg) translateX(350px); opacity: 0; }
+            35% { transform: rotate(135deg) translateX(350px); opacity: 0; }
             100% { opacity: 0; }
         }
 
@@ -668,6 +668,13 @@
             margin-bottom: 10px;
         }
 
+        .footer-logo {
+            width: 60px;
+            height: auto;
+            margin-bottom: 10px;
+            filter: drop-shadow(0 0 10px rgba(255, 215, 0, 0.6));
+        }
+
         /* Realtime indicator */
         .realtime-badge {
             display: inline-flex;
@@ -766,7 +773,7 @@
 
         <!-- Footer -->
         <div class="footer">
-            <div class="footer-icon">⚽</div>
+            <img src="meteor.jpg" alt="METEOR" class="footer-logo">
             <p>메둥이들, 다 같이 와서<br>올해의 땀과 골, 수고를 건배로 마무리!</p>
         </div>
     </div>
