별똥별 속도 느리게 + 동그라미 방향 수정

--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
             position: absolute;
             width: 150px;
             height: 3px;
-            background: linear-gradient(90deg, #fff, #ffd700, transparent);
+            background: linear-gradient(90deg, transparent, #ffd700, #fff);
             border-radius: 50%;
             transform: rotate(135deg);
-            animation: shoot 2.5s ease-in-out infinite;
+            animation: shoot 4s ease-in-out infinite;
             opacity: 0;
             box-shadow: 0 0 10px #ffd700, 0 0 20px #ffd700;
         }
@@ -95,7 +95,7 @@
             height: 8px;
             background: white;
             border-radius: 50%;
-            left: 0;
+            right: 0;
             top: -2.5px;
             box-shadow: 0 0 10px #fff, 0 0 20px #ffd700;
         }
